c-codes/include/cosmo_bk.h

int initial_lcdm(double omegam, double omegak, double hubble);
double lcdm_hz(double z);