c-codes/include/cosmo_gp.h

#define __COSMO_GP__
double gp_hz(double z);
double gp_cov_hz(double zi, double zj);
double gp_dimles_comdistance(double z);
double gp_cov_dimles_comdistance(double zi, double zj);
double gp_dimles_comangdistance(double z);
double gp_cov_dimles_comangdistance(double zi, double zj);
double gp_com_distance(double z);
double gp_ang_distance(double z);
double gp_lum_distance(double z);
double gp_DistanceModulus_star(double z);
double gp_cov_DistanceModulus_star(double zi, double zj);
double gp_DistanceModulus(double z);
double gp_DistanceSumRole(double zl, double zs);
double gp_cov_DistanceSumRole(double zli, double zsi, double zlj, double zsj);
int GP_OHD_Pantheon_output_dc(int num);
int GP_OHD_initial_Pantheon(void);
double GP_OHD_sn_loglikelihood(void);
double GP_OHD_rofchi(double chi, double omk);
double return_gp_ohd_loglike(double omk);