my_gapp.py


#double gp_hz(double z);
gp_hz = _mod.gp_hz
gp_hz.argtypes = (c_double,)
gp_hz.restype = c_double

#double gp_cov_hz(double zi, double zj);
gp_cov_hz = _mod.gp_cov_hz
gp_cov_hz.argtypes = (c_double,c_double)
gp_cov_hz.restype = c_double

#double gp_dimles_comdistance(double z);
gp_dimles_comdistance = _mod.gp_dimles_comdistance
gp_dimles_comdistance.argtypes = (c_double,)
gp_dimles_comdistance.restype = c_double

#double gp_cov_dimles_comdistance(double zi, double zj);
gp_cov_dimles_comdistance = _mod.gp_cov_dimles_comdistance
gp_cov_dimles_comdistance.argtypes = (c_double,c_double)
gp_cov_dimles_comdistance.restype = c_double

#double gp_dimles_comangdistance(double z);
#double gp_cov_dimles_comangdistance(double zi, double zj);
#
#double gp_com_distance(double z);
#double gp_ang_distance(double z);
#double gp_lum_distance(double z);
#
#double gp_DistanceModulus_star(double z);
#double gp_cov_DistanceModulus_star(double zi, double zj);
#
#double gp_DistanceModulus(double z);
#
#double gp_DistanceSumRole(double zl, double zs);
#double gp_cov_DistanceSumRole(double zli, double zsi, double zlj, double zsj);
#
#int GP_OHD_Pantheon_output_dc(int num);
#
#int GP_OHD_initial_Pantheon(void);
#double GP_OHD_sn_loglikelihood(void);
#double GP_OHD_rofchi(double chi, double omk);
#double return_gp_ohd_loglike(double omk);
return_gp_ohd_loglike = _mod.return_gp_ohd_loglike
return_gp_ohd_loglike.argtypes = (c_double,)
return_gp_ohd_loglike.restype = c_double

#endif /* __COSMO_GP__ */
###===================================
##if __name__ == "__main__":
##    N = 51
##    filename = bytes("/home/ekli/myworks/cosmodata/OHD_51.txt", "utf8")
##    sigf=170.75260325
##    lenf=2.61947963
##
##    status = initial_gapp(N,filename,sigf,lenf)
##    print(status)
##
##    status = setup_gapp()
##    print(status)
##    
##    h0 = rec_mu(0.0)
##    omm = 0.3
##    status = initial_lcdm(omm,h0)
##
##    zz = np.linspace(0,2,41)
##
##    for z in zz:
##        print("%5.2f "%z, end=' ')
##        print("%8.3f "%rec_mu(z), end=' ')
##        cov = rec_covariance(z, z)
##        print("%9.6f "%np.sqrt(cov), end=' ')
##        print("%8.3f "%lcdm_hz(z), end=' ')
##        
##        print("")
##
##    hz = np.array([rec_mu(z) for z in zz])
##    sig = np.array([np.sqrt(rec_covariance(z,z)) for z in zz])
##
##    plt.plot(zz, hz, '--b')
##    plt.fill_between(zz, hz+sig, hz-sig, color='blue', alpha=0.5)
##
##    lhz = np.array([lcdm_hz(z) for z in zz])
##    plt.plot(zz, lhz, ':k')
##
##
##    plt.show()
##
